[WNC-13] get customer name by account number (#11)
