# docs/swagger.json
@@ -4,6 +4,41 @@
         "contact": {}
     },
     "paths": {
+        "/account/customer-name": {
+            "get": {
+                "description": "Get Customer Name by Account Number",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Accounts"
+                ],
+                "summary": "Get Customer Name by Account Number",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Account payload",
+                        "name": "accountNumber",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/httpcommon.HttpResponse-model_GetCustomerNameByAccountNumberResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httpcommon.HttpResponse-any"
+                        }
+                    }
+                }
+            }
+        },
         "/account/internal-transfer": {
             "post": {
                 "description": "Transfer from internal account to internal account",
@@ -25,6 +60,49 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/model.InternalTransferRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httpcommon.HttpResponse-any"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httpcommon.HttpResponse-any"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/forgot-password/verify-otp": {
+            "post": {
+                "description": "Verify OTP with email and otp",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auths"
+                ],
+                "summary": "Verify OTP",
+                "parameters": [
+                    {
+                        "description": "Verify OTP payload",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.VerifyOTPRequest"
                         }
                     }
                 ],
@@ -114,49 +192,6 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/model.RegisterRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/httpcommon.HttpResponse-any"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/httpcommon.HttpResponse-any"
-                        }
-                    }
-                }
-            }
-        },
-        "/auth/reset-password": {
-            "post": {
-                "description": "Resets user password base on their email",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Auths"
-                ],
-                "summary": "Reset Password",
-                "parameters": [
-                    {
-                        "description": "Reset Password payload",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.ResetPasswordRequest"
                         }
                     }
                 ],
@@ -274,7 +309,7 @@
                 "createdAt": {
                     "type": "string"
                 },
-                "deleteddAt": {
+                "deletedAt": {
                     "type": "string"
                 },
                 "email": {
@@ -282,6 +317,9 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "name": {
+                    "type": "string"
                 },
                 "password": {
                     "type": "string"
@@ -357,6 +395,31 @@
                 }
             }
         },
+        "httpcommon.HttpResponse-model_GetCustomerNameByAccountNumberResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/model.GetCustomerNameByAccountNumberResponse"
+                },
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/httpcommon.Error"
+                    }
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "model.GetCustomerNameByAccountNumberResponse": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "model.InternalTransferRequest": {
             "type": "object",
             "required": [
@@ -408,6 +471,7 @@
             "type": "object",
             "required": [
                 "email",
+                "name",
                 "password",
                 "phoneNumber"
             ],
@@ -416,6 +480,11 @@
                     "type": "string",
                     "maxLength": 255,
                     "minLength": 10
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 5
                 },
                 "password": {
                     "type": "string",
@@ -429,12 +498,24 @@
                 }
             }
         },
-        "model.ResetPasswordRequest": {
+        "model.SendOTPRequest": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 10
+                }
+            }
+        },
+        "model.VerifyOTPRequest": {
             "type": "object",
             "required": [
                 "email",
-                "otp",
-                "password"
+                "otp"
             ],
             "properties": {
                 "email": {
@@ -446,24 +527,6 @@
                     "type": "string",
                     "maxLength": 6,
                     "minLength": 6
-                },
-                "password": {
-                    "type": "string",
-                    "maxLength": 255,
-                    "minLength": 8
-                }
-            }
-        },
-        "model.SendOTPRequest": {
-            "type": "object",
-            "required": [
-                "email"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string",
-                    "maxLength": 255,
-                    "minLength": 10
                 }
             }
         }
