# internal/controller/http/v1/account_handler.go
@@ -42,3 +42,25 @@ func (handler *AccountHandler) InternalTransfer(ctx *gin.Context) {
 	}
 	ctx.AbortWithStatus(204)
 }
+
+// @Summary Get Customer Name by Account Number
+// @Description Get Customer Name by Account Number
+// @Tags Accounts
+// @Param accountNumber query string true "Account payload"
+// @Produce  json
+// @Router /account/customer-name [get]
+// @Success 200 {object} httpcommon.HttpResponse[model.GetCustomerNameByAccountNumberResponse]
+// @Failure 500 {object} httpcommon.HttpResponse[any]
+func (handler *AccountHandler) GetCustomerNameByAccountNumber(ctx *gin.Context) {
+	accountNumber := ctx.Query("accountNumber")
+	customer, err := handler.accountService.GetCustomerByAccountNumber(ctx, accountNumber)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, httpcommon.NewErrorResponse(httpcommon.Error{
+			Message: err.Error(), Field: "", Code: httpcommon.ErrorResponseCode.InternalServerError,
+		}))
+		return
+	}
+	ctx.JSON(http.StatusOK, httpcommon.NewSuccessResponse(&model.GetCustomerNameByAccountNumberResponse{
+		Name: customer.Name,
+	}))
+}
