# internal/domain/model/customer.go
@@ -1,0 +1,5 @@
+package model
+
+type GetCustomerNameByAccountNumberResponse struct {
+	Name string `json:"name"`
+}
